update todo list

--- a/miscs/todo.txt
+++ b/miscs/todo.txt
@@ -1,18 +1,3 @@
-# finir les func upload
-  # verifier si les fichier existent avant de upload
-    # fair l'upload, ajouter la possibilité de dir + verifier les taille de fichier pour l'upload + presence fichier/repertoire
-    # pour les dir, verifier le contnu ou un md5 ?
-    upload()
-    is_dir(remote)
-    mkdir(remote)
-    sync(remote, local)
-
-# improve createdir, delete, duplicate, move functions
-
-# documenter les fonction et la classe
-
-# voir pour parralélliser ?
-
-# faire un module de syncro bi-dir ...
-
+# documenter les fonctions et la classe
 # A valider aussi sous arm ...
+# voir pour parralélliser ?
