--- a/miscs/todo.txt
+++ b/miscs/todo.txt
@@ -1,6 +1,5 @@
 # Finir le scripts/pydav-client
-  ajout des option passer en fonction
-  appel des fonction suivant les options
+  Do functions, and tests them
 
 # A valider aussi sous arm ...
 # voir pour parralélliser ?
